# freedom-that-lasts

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  Dockerfile.test  README.md  RELEASE_v0.1.md  THREAT_MODEL.md  docker-compose.yml  pyproject.toml  test_procurement_integration.py
.github/workflows/: ci.yml
deploy/: README.md
deploy/prometheus/: alerts.yml  prometheus.yml
docs/: ARCHITECTURE.md  README.md  TECHNICAL_OVERVIEW.md  paper.md
docs/notes/: consensus.md
docs/press_kit/: 30-sec-interview.md  README.md  another_interview.md  cross_examination.md  from_the_left.md  from_the_right.md  interview.md  why_this_book_now.md
docs/synopsises/: README.md  academy.md  business.md  common_sense.md  policy.md
docs/whitepapers/: README.md  academic.md  common_sense.md  policy_and_institutional.md  technical.md
examples/: README.md  budget_example.py  city_pilot.py  replay_demo.py  resource_example.py
scripts/: convert_latex_syntax.py  performance_benchmark.py
src/freedom_that_lasts/: __init__.py  ftl.py  health_server.py  metrics_server.py
src/freedom_that_lasts/budget/: commands.py  events.py  handlers.py  invariants.py  models.py  projections.py  triggers.py
src/freedom_that_lasts/cli/: __init__.py  main.py
src/freedom_that_lasts/feedback/: __init__.py  indicators.py  models.py  projections.py  triggers.py
src/freedom_that_lasts/kernel/: __init__.py  bus.py  commands.py  errors.py  event_store.py  events.py  ids.py  logging.py  metrics.py  projection_store.py  retry.py  safety_policy.py  tick.py  time.py  timeout.py
src/freedom_that_lasts/law/: __init__.py  commands.py  events.py  handlers.py  invariants.py  models.py  projections.py
src/freedom_that_lasts/resource/: __init__.py  commands.py  events.py  feasible.py  handlers.py  invariants.py  models.py  projections.py  selection.py  triggers.py
tests/: __init__.py  conftest.py  helpers.py  test_cli_budget.py  test_cli_comprehensive.py  test_ftl_facade.py  test_health_server.py  test_integration_e2e.py
tests/test_budget/: test_handlers.py  test_integration.py  test_invariants.py  test_projections.py  test_triggers.py
tests/test_feedback/: __init__.py  test_indicators.py  test_projections.py  test_tick_integration.py  test_triggers.py
tests/test_infrastructure/: test_bus_logging.py  test_logging_metrics.py
tests/test_kernel/: test_event_store.py  test_projection_store.py
tests/test_law/: test_handlers.py  test_invariants.py  test_lifecycle_integration.py  test_models.py  test_projections.py
tests/test_resource/: __init__.py  test_feasible.py  test_handlers.py  test_invariants.py  test_models.py  test_projections.py  test_selection.py  test_triggers.py
