[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "freedom-that-lasts"
version = "0.1.0"
description = "Event-sourced governance kernel preserving future option space through revocable delegation, time-bound laws, and anti-tyranny safeguards"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
authors = [
    {name = "Freedom That Lasts Contributors"}
]
keywords = [
    "governance",
    "event-sourcing",
    "democracy",
    "decision-rights",
    "anti-tyranny"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "pydantic>=2.0.0,<3.0.0",
    "sqlmodel>=0.0.14,<1.0.0",
    "typer>=0.12.0,<1.0.0",
    "rich>=13.0.0,<14.0.0",  # For beautiful CLI output
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0,<9.0.0",
    "pytest-cov>=4.1.0,<5.0.0",
    "mypy>=1.8.0,<2.0.0",
    "ruff>=0.3.0,<1.0.0",
]

[project.scripts]
ftl = "freedom_that_lasts.cli.main:main"

[project.urls]
Homepage = "https://github.com/freedom-that-lasts/freedom-that-lasts"
Documentation = "https://freedom-that-lasts.readthedocs.io"
Repository = "https://github.com/freedom-that-lasts/freedom-that-lasts"
Issues = "https://github.com/freedom-that-lasts/freedom-that-lasts/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/freedom_that_lasts"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--cov=freedom_that_lasts",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-branch",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"
strict_optional = true

[tool.ruff]
target-version = "py311"
line-length = 100
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = []
fixable = ["ALL"]
unfixable = []
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    "venv",
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports in __init__.py

[tool.coverage.run]
source = ["freedom_that_lasts"]
branch = true
omit = [
    "*/tests/*",
    "*/test_*.py",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if TYPE_CHECKING:",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "@abstractmethod",
]
